Configurando Program.cs e criando AppDbContext

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "DefaultConnection": "Host=localhost;Port=5432;Database=GamesBoxd;Username=postgres;Password=1q2w3e4r@#$"
 }
