Ajuste no AppDbContext e gerando primeira migration

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "DefaultConnection": "Host=localhost;Port=5432;Database=GamesBoxd;Username=postgres;Password=1q2w3e4r@#$"
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=gamesboxd;Username=postgres;Password=1q2w3e4r@#$;"
+  },
+  "Jwt": "q9ZxV7mB3pL1sW8nC4rT2dG6hF5uJ0eY"
 }
